--- a/docProject/docApp/templates/signUp.html
+++ b/docProject/docApp/templates/signUp.html
@@ -1,4 +1,4 @@
-<form action="/sign-up/" method="post">
+<form action="{% url 'docApp:sign-up' %}" method="post">
   {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
   <div class="fieldWrapper">
     {{ field.errors }} {{ field.label_tag }} {{ field }}
