In this commit I've updated the model to include tables for research and participants. I also defined the relationship between the tables with foreign keys. I've also added some views and associated templates. Everything is taking shape slowly.

--- a/docProject/templates/docApp/signIn.html
+++ b/docProject/templates/docApp/signIn.html
@@ -1,4 +1,6 @@
-<form action="{% url 'docApp:sign-up' %}" method="post">
+{% extends 'base.html' %} {% load static %} {% block content %}
+
+<form action="{% url 'docApp:sign-in' %}" method="post">
   {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
   <div class="fieldWrapper">
     {{ field.errors }} {{ field.label_tag }} {{ field }}
@@ -6,3 +8,5 @@
   {% endfor %}
   <input type="submit" value="Submit" />
 </form>
+
+{% endblock %}
