This is the point I left it at. The app has most of its functionalities in place the main thing missing is that authorization and authentication layer. I'm learning thr concepts for the missing piece on DRF and I'll most likely comeback to wrap up the project when I'm equipped enough. Adious retonos

--- a/docProject/templates/addParticipant.html
+++ b/docProject/templates/addParticipant.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
-<form action="{% url 'docApp:sign-up' %}" method="post">
-  {% csrf_token %} {{ form.non_field_errors }} {% for field in form %}
+<form action="{% url 'docApp:add-participant' r_id=r_id %}" method="post">
+  {{ form.non_field_errors }} {% csrf_token %} {% for field in form %}
   <div class="fieldWrapper">
     {{ field.errors }} {{ field.label_tag }} {{ field }}
   </div>
